src/css/modalContent.css
.modalBody {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    height: 100%;
    max-width: 100%;
    z-index: 4;
}

.description {
    display: block;
    width: 80%;
    max-width: 40rem;
    padding-left: 2rem;
    padding-bottom: 2rem;
    overflow-wrap: break-word;
    text-align: justify;
    overflow: clip;
}

.gallery {
    position: relative;
    width: 80%;
    max-width: 40rem;
    height: 60%;
    margin: 2rem;
    display: grid;
    grid-template-columns: 2fr 3fr;
    grid-gap: 1.5rem;
}

.gallery .left-col, .gallery .right-col {
    display: grid;
    grid-gap: 1.5rem;
}

.gallery .left-col {
    grid-template-rows: 3fr .1fr 2fr .1fr;
}

.gallery .right-col {
    grid-template-rows: 2fr .1fr 3fr .1fr;
}

.gallery img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: flex;
}
@media only screen and (max-width: 830px) {
    .gallery{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-content: center;
        width: 80%;
    }

    .title{
        margin-left: 1rem;
    }
}

